--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,7 +14,7 @@
 
 .buttonize(@color;@fontsize) {
     background-color: @color;
-    padding: 8px 20px;
+    padding: 8px 10%;
     border-radius: 5px;
     text-align: center;
     font-size: @fontsize;
